--- a/customrules.ini
+++ b/customrules.ini
@@ -2,12 +2,12 @@
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 HongKong`.*
 custom_proxy_group=📲 Telegram`select`(🇸🇬|singapore|sg)
 custom_proxy_group=🇭🇰 HongKong`url-test`(🇭🇰|港|hk|hongkong|hong kong)`http://www.gstatic.com/generate_204`300,5
+custom_proxy_group=🤖 AI平台`select`.*
 ; 规则
-ruleset=DIRECT,[]GEOSITE,private
-ruleset=DIRECT,[]GEOIP,private,no-resolve
 ruleset=DIRECT,https://raw.githubusercontent.com/llxo/clash-cr/refs/heads/main/rule/Direct.list
-ruleset=📲 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/llxo/clash-cr/refs/heads/main/rule/HongKong.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🤖 AI平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/AI.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ProxyLite.list
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
