--- a/customrules.ini
+++ b/customrules.ini
@@ -1,18 +1,18 @@
 ; 代理组
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 HongKong`.*
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 HongKong`[]🚀 节点选择`(🇸🇬|singapore|sg)
-custom_proxy_group=🇭🇰 HongKong`url-test`(🇭🇰|港|hk|hongkong|hong kong)`http://www.gstatic.com/generate_204`300,5
-custom_proxy_group=🤖 AI平台`select`[]🚀 节点选择`(日本|日|JP|Japan|🇯🇵)
+custom_proxy_group=节点选择`select`[]🇭🇰 HongKong`.*
+custom_proxy_group=Telegram`select`[]🇭🇰 HongKong`[]节点选择`(🇸🇬|singapore|sg)
+custom_proxy_group=HongKong`url-test`(🇭🇰|港|hk|hongkong|hong kong)`http://www.gstatic.com/generate_204`300,5
+custom_proxy_group=TikTok`select`[]节点选择`(日本|日|JP|Japan|🇯🇵)
 ; 规则
 ruleset=DIRECT,https://raw.githubusercontent.com/llxo/clash-cr/refs/heads/main/rule/Direct.list
-ruleset=DIRECT,[]GEOSITE,googlefcm
-ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/llxo/clash-cr/refs/heads/main/rule/HongKong.list
-ruleset=📲 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🤖 AI平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/AI.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ProxyLite.list
+ruleset=HongKong,https://raw.githubusercontent.com/llxo/clash-cr/refs/heads/main/rule/HongKong.list
+ruleset=Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=TikTok,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/AI.list
+ruleset=TikTok,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/TikTok.list
+ruleset=节点选择,[]GEOSITE,gfw
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
-ruleset=🚀 节点选择,[]FINAL
+ruleset=节点选择,[]FINAL
 
 enable_rule_generator=true
 overwrite_original_rules=true
