--- a/mobilecr.ini
+++ b/mobilecr.ini
@@ -1,3 +1,4 @@
+[custom]
 ; 代理组
 custom_proxy_group=节点选择`select`[]🇭🇰 HongKong`.*
 custom_proxy_group=Telegram`select`[]🇭🇰 HongKong`[]节点选择`(🇸🇬|singapore|sg)
