--- a/clash verge rev/覆写配置.yaml
+++ b/clash verge rev/覆写配置.yaml
@@ -74,5 +74,5 @@ proxy-groups:
     interval: 300
     tolerance: 50
     include-all-proxies: true
-    filter: "(?i)IEPL"
+    filter: "(?i)IEPL|专线"
     icon: "https://www.clashverge.dev/assets/icons/speed.svg"
