新增DNS配置和规则，优化代理组设置

--- a/clash verge rev/超多规则版.yaml
+++ b/clash verge rev/超多规则版.yaml
@@ -10,6 +10,68 @@ dns:
     fallback: ['https://doh.dns.sb/dns-query#节点选择', 'https://dns.cloudflare.com/dns-query#节点选择', 'https://dns.twnic.tw/dns-query#节点选择', 'tls://8.8.4.4:853#节点选择', 'https://1.1.1.1/dns-query#节点选择', 'https://1.1.1.2/dns-query#节点选择', 'https://1.1.1.3/dns-query#节点选择', 'https://1.0.0.1/dns-query#节点选择', 'https://1.0.0.2/dns-query#节点选择', 'https://1.0.0.3/dns-query#节点选择', 'https://45.11.45.11/dns-query', 'https://146.112.41.2/dns-query', 'https://162.159.36.1/dns-query', 'https://162.159.46.1/dns-query', 'https://9.9.9.11:5053/dns-query', 'https://101.6.6.6:8443/dns-query', 'https://208.67.222.222/dns-query', 'https://208.67.220.220/dns-query', 'https://185.222.222.222/dns-query', 'https://101.101.101.101/dns-query', 'https://149.112.112.11:5053/dns-query', 'tls://94.140.14.140']
     fallback-filter: { geoip: true, ipcidr: [240.0.0.0/4, 0.0.0.0/32] }
 
+rule-providers:
+  reject:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
+    path: ./ruleset/reject.yaml
+    interval: 86400
+  google:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/google.txt"
+    path: ./ruleset/google.yaml
+    interval: 86400
+  proxy:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt"
+    path: ./ruleset/proxy.yaml
+    interval: 86400
+  direct:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt"
+    path: ./ruleset/direct.yaml
+    interval: 86400
+  private:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/private.txt"
+    path: ./ruleset/private.yaml
+    interval: 86400
+  gfw:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt"
+    path: ./ruleset/gfw.yaml
+    interval: 86400
+  tld-not-cn:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/tld-not-cn.txt"
+    path: ./ruleset/tld-not-cn.yaml
+    interval: 86400
+  cncidr:
+    type: http
+    behavior: ipcidr
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt"
+    path: ./ruleset/cncidr.yaml
+    interval: 86400
+  lancidr:
+    type: http
+    behavior: ipcidr
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/lancidr.txt"
+    path: ./ruleset/lancidr.yaml
+    interval: 86400
+  applications:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/applications.txt"
+    path: ./ruleset/applications.yaml
+    interval: 86400
+
 rules:
   # 自定义直连
   - DOMAIN-SUFFIX,jx.cn,DIRECT
@@ -37,9 +99,16 @@ rules:
   - GEOSITE,tiktok,TikTok
   - GEOSITE,google-gemini,TikTok
   # 基础
-  - GEOSITE,gfw,节点选择
-  - GEOSITE,cn,DIRECT
-  - GEOIP,CN,DIRECT,no-resolve
+  - RULE-SET,applications,DIRECT
+  - DOMAIN,clash.razord.top,DIRECT
+  - DOMAIN,yacd.haishan.me,DIRECT
+  - RULE-SET,private,DIRECT
+  - RULE-SET,reject,REJECT
+  - RULE-SET,google,节点选择
+  - RULE-SET,proxy,节点选择
+  - RULE-SET,direct,DIRECT
+  - RULE-SET,lancidr,DIRECT,no-resolve
+  - RULE-SET,cncidr,DIRECT,no-resolve
   - MATCH,节点选择
 
 proxy-groups:
@@ -47,29 +116,21 @@ proxy-groups:
     type: select
     include-all-proxies: true
     icon: "https://www.clashverge.dev/assets/icons/adjust.svg"
-    proxies:
-      - "DIRECT"
-      - "HongKong"
-      - "IEPL"
+    proxies: ["DIRECT", "HongKong", "IEPL"]
 
   - name: "Telegram"
     type: select
     include-all-proxies: true
     filter: "(?i)singapore|sg|新加坡|🇸🇬"
     icon: "https://www.clashverge.dev/assets/icons/telegram.svg"
-    proxies:
-      - "节点选择"
-      - "HongKong"
-      - "IEPL"
+    proxies: ["节点选择", "HongKong", "IEPL"]
 
   - name: "TikTok"
     type: select
     include-all-proxies: true
     filter: "(?i)Japan|日|jp|🇯🇵"
     icon: "https://fastly.jsdelivr.net/gh/Orz-3/mini@master/Color/FRANXX.png"
-    proxies:
-      - "节点选择"
-      - "IEPL"
+    proxies: ["节点选择", "IEPL"]
 
   - name: "HongKong"
     type: url-test
